Updated syntax for more clarity

--- a/clean.html
+++ b/clean.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="clean.css">
 <script src="clean.js"></script>
 </head>
-<h1>How long have you been good?</h1>
+<h1>How long have you been clean?</h1>
 <div id="countup">
   It's been
   <p id="days">00</p>
@@ -15,4 +15,3 @@
   <p id="seconds">00</p>
   <p class="timeRefSeconds">second</p>
 </div>
-<h2>Congratulations!</h2>
